tests/NormalTests/paczka1/fuzzy1/52615011.err
Error in line 11: ctb6Ta S786 58,2
Error in line 10: olA S786 88,6
Error in line 19: olA S91 31,2
Error in line 23: ggbp5H7i6p S607 33,0
Error in line 29: ggbp5H7i6p S786 56,3
